# fe

./: .gitignore  CHANGELOG.md  CLI.md  Cargo.toml  Makefile  README.md  pyproject.toml
crates/bench/: Cargo.toml
crates/bench/benches/: analysis.rs  scip_regen.rs
crates/codegen/: Cargo.toml  build.rs
crates/codegen/src/: backend.rs  layout.rs  lib.rs  runtime_package.rs  test_output.rs
crates/codegen/src/sonatina/: lower.rs  lower_runtime.rs  mod.rs  tests.rs  types.rs
crates/codegen/src/yul/: errors.rs  legalize.rs  mod.rs  state.rs
crates/codegen/tests/: code_region_borrowck.rs  native_backend.rs  runtime_array_ctor.rs  runtime_handle_preservation.rs  sonatina.rs  sonatina_gasprice.rs  sonatina_ir.rs  sonatina_operand_collect.rs  test_yul_tests.rs  yul.rs  yul_const_backed_calls.rs
crates/codegen/tests/fixtures/: alloc.fe  alloc.snap  alloc_self_assign.fe  alloc_self_assign.snap  arg_bindings.fe  arg_bindings.snap  array_literal.snap  array_literal_u256.fe  array_literal_u256.snap  array_mut.fe  array_mut.snap  aug_assign.fe  aug_assign.snap  aug_assign_bit_ops.fe  aug_assign_bit_ops.snap  bit_and.snap  bit_ops.fe  bit_ops.snap  bitnot.fe  bitnot.snap  block_expr.snap  bool_literal.snap  borrow_handles_readback.snap  borrow_storage_field_handle.fe  borrow_storage_field_handle.snap  by_ref_trait_provider_storage_bug.fe  by_ref_trait_provider_storage_bug.snap  by_ref_trait_provider_storage_bug.snap.new  caller.fe  caller.snap  cast_u8_usize_cmp.fe  cast_u8_usize_cmp.snap  code_region.fe  code_region.snap  code_region_qualified.fe  code_region_qualified.snap  comparison_ops.snap  const_array.fe  const_array.snap  const_array_add.snap  (+173 more)
crates/common/: Cargo.toml
crates/common/src/: compilation.rs  diagnostics.rs  files.rs  indexmap.rs  ingot.rs  lib.rs  options.rs  paths.rs  stdlib.rs
crates/common/src/config/: ingot.rs  mod.rs  workspace.rs
crates/common/src/dependencies/: graph.rs
crates/common/src/file/: workspace.rs
crates/contract-harness/: Cargo.toml
crates/contract-harness/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: db.rs  ingot_handler.rs  lib.rs
crates/driver/tests/: workspace_resolution.rs
crates/fe/: Cargo.toml  build.rs
crates/fe-web/: Cargo.toml  build.rs
crates/fe-web/assets/: fe-code-block.js  fe-doc-item.js  fe-doc-nav.js  fe-doc-viewer.js  fe-highlight.css  fe-highlighter.js  fe-scip-store.js  fe-search.js  fe-signature.js  fe-symbol-link.js  fe-web.js  styles.css
crates/fe-web/astro/: remark-fe-highlight.mjs
crates/fe-web/src/: assets.rs  escape.rs  lib.rs  markdown.rs  model.rs  starlight.rs  static_site.rs  wasm.rs
crates/fe/bench_fixtures/: bitwise_u256.fe  bitwise_u256.sol  bitwise_u256.toml  loops.fe  loops.sol  loops.toml  math_u256.fe  math_u256.sol  math_u256.toml  storage_packed_array.fe  storage_packed_array.sol  storage_packed_array.toml  storage_simple.fe  storage_simple.sol  storage_simple.toml
crates/fe/src/: abi.rs  bench.rs  bench_support.rs  build.rs  check.rs  doc.rs  doc_serve.rs  extract.rs  index_util.rs  lib.rs  lsif.rs  main.rs  report.rs  scip_index.rs  test.rs
crates/fe/src/cli/: new.rs
crates/fe/src/test/: gas.rs  mod.rs
crates/fe/tests/: build_foundry.rs  cli_new.rs  cli_output.rs  crash_regressions.rs  differential_deposit.rs  differential_storage_packed_array.rs  fmt_semantic_roundtrip.rs
crates/fe/tests/differential_deposit/: OfficialDepositContract.sol  gas_report.snap
crates/fe/tests/differential_storage_packed_array/: gas_report.snap
crates/fe/tests/doc_fixtures/: enum_with_variants.fe  enum_with_variants.snap  module_tree.snap  simple_struct.fe  simple_struct.snap  trait_and_impl.snap
crates/hir/: Cargo.toml  build.rs
crates/hir/src/: diagnosable.rs  layout.rs  lib.rs  projection.rs  test_db.rs
crates/hir/src/analysis/: mod.rs  (+4 more)
crates/hir/tests/: arithmetic_attr.rs  attr_semantics.rs  const_param_assumptions.rs  constraints.rs  corelib.rs  decision_tree.rs  default_trait_methods.rs  effect_binding_resolution.rs  effect_key_normalization.rs  generic_default_metadata.rs  import.rs  layout_hole_assumptions.rs  param_env.rs  path_binding_reads.rs  pattern_ir.rs  pattern_lowering.rs  pattern_matching.rs  runtime_builtin_func_kind.rs  semantic_borrowck.rs  semantic_ctfe.rs  trait_sig_const_generic.rs  ty_check.rs
crates/language-server/: Cargo.toml
crates/language-server/benches/: doc_reload.rs
crates/language-server/src/: cli.rs  combined_server.rs  lib.rs  logging.rs  lsp_diagnostics.rs  lsp_streams.rs  main.rs  mock_client_tests.rs  panic_context.rs  server.rs  util.rs  ws_lsp.rs
crates/language-server/test_files/: completion.snap  goto_contract.snap  goto_effects.snap  goto_extern_call.fe  goto_extern_call.snap  goto_func_sig.snap  goto_hover_bugs.fe  goto_hover_bugs.snap  goto_origin_range.fe  goto_origin_range.snap
crates/mir/: Cargo.toml
crates/mir/src/: capability_space.rs  const_data.rs  core_lib.rs  dedup.rs  fmt.rs  hash.rs  ir.rs  layout.rs  lib.rs  monomorphize.rs  repr.rs  transform.rs
crates/mir/tests/: analysis_diagnostics.rs  extern_generic_calls.rs  template_borrowck_unresolved_calls.rs  trait_default_ne.rs
crates/mir2/: Cargo.toml
crates/mir2/src/: db.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  syntax_kind.rs
crates/parser/tests/: error_recovery.rs  no_recovery.rs  syntax_node.rs  test_runner.rs  tree_sitter_parse.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: files.rs  git.rs  ingot.rs  lib.rs  workspace.rs
crates/semantic-indexing/: Cargo.toml
crates/semantic-indexing/src/: doc.rs  extract.rs  index_util.rs  lib.rs  lsif.rs  scip_batch.rs  tracked.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: _macro_support.rs  lib.rs  normalize.rs
crates/tree-sitter-fe/: Cargo.toml  grammar.js  package-lock.json
crates/tree-sitter-fe/queries/: embedding.scm  highlights.scm  overrides.scm  runnables.scm  textobjects.scm
crates/tree-sitter-fe/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/uitest/: Cargo.toml
crates/uitest/tests/: semantic_borrowck.rs
(+1489 files in other folders)
