[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
common = { path = "crates/common", package = "fe-common" }
driver = { path = "crates/driver", package = "fe-driver" }
fmt = { path = "crates/fmt", package = "fe-fmt" }
hir = { path = "crates/hir", package = "fe-hir" }
parser = { path = "crates/parser", package = "fe-parser" }
test-utils = { path = "crates/test-utils", package = "fe-test-utils" }
resolver = { path = "crates/resolver", package = "fe-resolver" }
codegen = { path = "crates/codegen", package = "fe-codegen" }
language-server = { path = "crates/language-server", package = "fe-language-server" }
mir = { path = "crates/mir", package = "fe-mir" }
cranelift-entity = "0.115"
url = "2.5.4"
camino = "1.1.9"
typed-path = "0.12.3"
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.65"
codespan-reporting = "0.11"
derive_more = { version = "1.0", default-features = false, features = [
    "from",
    "try_into",
] }
dir-test = "0.4"
glob = "0.3.2"
crossbeam-channel = "0.5.15"
rustc-hash = "2.1.0"
num-bigint = "0.4"
num-traits = "0.2"
paste = "1.0.15"
salsa = "0.20"
smallvec = { version = "2.0.0-alpha.11" }
smallvec1 = { version = "1", package = "smallvec" }
thin-vec = "0.2.14"
smol_str = { version = "0.1", features = ["serde"] }
serde-semver = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
wasm-bindgen-test = "0.3"
semver = "1.0.26"
petgraph = "0.8"
sonatina-ir = { git = "https://github.com/fe-lang/sonatina", rev = "2aae7f0" }
sonatina-triple = { git = "https://github.com/fe-lang/sonatina", rev = "2aae7f0" }
sonatina-codegen = { git = "https://github.com/fe-lang/sonatina", rev = "2aae7f0" }
sonatina-verifier = { git = "https://github.com/fe-lang/sonatina", rev = "2aae7f0" }

[profile.dev]
# Set to 0 to make the build faster and debugging more difficult.
debug = 0

[profile.test]
# Set to 0 to make the build faster and debugging more difficult.
debug = 0

[profile.dev.package]
revm = { opt-level = 3 }
revm-bytecode = { opt-level = 3 }
revm-context = { opt-level = 3 }
revm-context-interface = { opt-level = 3 }
revm-database = { opt-level = 3 }
revm-database-interface = { opt-level = 3 }
revm-handler = { opt-level = 3 }
revm-inspector = { opt-level = 3 }
revm-interpreter = { opt-level = 3 }
revm-precompile = { opt-level = 3 }
revm-primitives = { opt-level = 3 }
revm-state = { opt-level = 3 }
sonatina-ir = { opt-level = 3 }
sonatina-codegen = { opt-level = 3 }
sonatina-verifier = { opt-level = 3 }

[profile.test.package]
revm = { opt-level = 3 }
revm-bytecode = { opt-level = 3 }
revm-context = { opt-level = 3 }
revm-context-interface = { opt-level = 3 }
revm-database = { opt-level = 3 }
revm-database-interface = { opt-level = 3 }
revm-handler = { opt-level = 3 }
revm-inspector = { opt-level = 3 }
revm-interpreter = { opt-level = 3 }
revm-precompile = { opt-level = 3 }
revm-primitives = { opt-level = 3 }
revm-state = { opt-level = 3 }
sonatina-ir = { opt-level = 3 }
sonatina-codegen = { opt-level = 3 }
sonatina-verifier = { opt-level = 3 }
