[package]
name = "fe-codegen"
version = "26.0.0"
edition.workspace = true

[dependencies]
driver = { path = "../driver", package = "fe-driver" }
mir2 = { path = "../mir2", package = "fe-mir2" }
hir.workspace = true
common.workspace = true
hex = "0.4"
rustc-hash.workspace = true
sonatina-ir.workspace = true
sonatina-triple.workspace = true
sonatina-codegen.workspace = true
sonatina-verifier.workspace = true
smallvec.workspace = true
smallvec1.workspace = true
tracing.workspace = true

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
url.workspace = true
hir = { workspace = true, features = ["testutils"] }
