[package]
name = "fe-common"
version = "26.0.0-alpha.7"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Provides HIR definition and lowering for Fe lang."

[lib]
doctest = false

[dependencies]
camino.workspace = true
paste.workspace = true
salsa.workspace = true
serde-semver.workspace = true
smol_str.workspace = true
rust-embed = "8.5.0"
toml = "0.8.8"
tracing.workspace = true
petgraph.workspace = true

parser.workspace = true
url.workspace = true
typed-path.workspace = true
ordermap = "0.5.5"
rustc-hash.workspace = true
radix_immutable = "0.1"
