[package]
name = "fe-driver"
version = "26.0.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Provides Fe driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
camino.workspace = true
codespan-reporting.workspace = true
salsa.workspace = true
smol_str.workspace = true

common.workspace = true
hir.workspace = true
resolver.workspace = true
url.workspace = true
tracing.workspace = true
mir.workspace = true
petgraph.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile = "3.13"
