[package]
name = "fe-web"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Fe documentation model types and web components"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:scip", "dep:protobuf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
scip = { version = "0.6.1", optional = true }
protobuf = { version = "=3.7.2", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
