[package]
name = "fe"
version = "0.26.0"
edition.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
driver.workspace = true
tracing.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
petgraph.workspace = true
url.workspace = true
smol_str.workspace = true
hir.workspace = true
mir.workspace = true
cranelift-entity.workspace = true
codegen = { path = "../codegen", package = "fe-codegen" }
contract-harness = { path = "../contract-harness", package = "fe-contract-harness" }
solc-runner = { path = "../solc-runner", package = "fe-solc-runner" }
fmt.workspace = true
walkdir = "2"
similar = "2"
colored = "2"
hex = "0.4"
toml = "0.8.8"
glob.workspace = true

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
tempfile = "3.23"
