[package]
name = "fe"
version = "26.1.0"
edition.workspace = true

[features]
default = ["doc-server", "lsp"]
doc-server = ["dep:tokio", "dep:axum"]
lsp = ["dep:language-server", "dep:tokio"]

[dependencies]
clap.workspace = true
clap_complete.workspace = true
driver.workspace = true
tracing.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
petgraph.workspace = true
url.workspace = true
salsa.workspace = true
smol_str.workspace = true
hir.workspace = true
rayon = "1"
mir.workspace = true
cranelift-entity.workspace = true
rustc-hash.workspace = true
semantic-indexing.workspace = true
codegen = { path = "../codegen", package = "fe-codegen" }
contract-harness = { path = "../contract-harness", package = "fe-contract-harness" }
solc-runner = { path = "../solc-runner", package = "fe-solc-runner" }
# fe-web for model, assets, and static site generation
fe-web = { path = "../fe-web" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
fmt.workspace = true
walkdir = "2"
similar = "2"
colored = "2"
hex = "0.4"
tempfile = "3.23"
toml = "0.8.8"
ethers-core = "2"
glob.workspace = true
crossbeam-channel.workspace = true
scip = "0.6.1"
protobuf = "=3.7.2"
language-server = { workspace = true, optional = true }
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread", "net", "macros"], optional = true }
axum = { version = "0.8", optional = true }

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
semantic-indexing.workspace = true
sha2 = "0.10"

[build-dependencies]
gix = { workspace = true, features = ["sha1"] }
