[package]
name = "fe-language-server"
version = "26.0.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "An LSP language server for Fe lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fe_language_server"

[[bin]]
name = "fe-language-server"
path = "src/main.rs"

[dependencies]
act-locally = "0.1.1"
anyhow = "1.0.95"
async-compat = "0.2.4"
async-lsp = { git = "https://github.com/micahscopes/async-lsp", branch = "pub-inner-type-id" }
async-std = "1.13.0"
camino.workspace = true
clap.workspace = true
codespan-reporting = "0.11"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-batch = "0.6.1"
rustc-hash.workspace = true
salsa.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
smol_str.workspace = true
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-std", "io-util"] }
tokio-tungstenite = "0.26"
tower = "0.5.2"
axum = { version = "0.8", features = ["ws"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.4"

codegen.workspace = true
common.workspace = true
driver.workspace = true
fe-web.workspace = true
mir.workspace = true
fmt.workspace = true
hir.workspace = true
parser.workspace = true
resolver.workspace = true
tempfile = "3.20.0"

[features]
default = []

[dev-dependencies]
test-utils.workspace = true
dir-test.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
