[package]
name = "fe-mir"
version = "26.0.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Placeholder MIR layer for the Fe compiler rewrite"

[lib]
doctest = false

[dependencies]
hir.workspace = true
common.workspace = true
rustc-hash.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
cranelift-entity.workspace = true

[dev-dependencies]
driver.workspace = true
url.workspace = true
dir-test.workspace = true
test-utils.workspace = true
