[package]
name = "fe-mir2"
version = "26.0.0-alpha.7"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Semantic/runtime MIR v2 architecture for Fe"

[lib]
doctest = false

[dependencies]
common.workspace = true
dataflow.workspace = true
hir.workspace = true
cranelift-entity.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
driver.workspace = true
url.workspace = true
