[package]
name = "fe-parser"
version = "26.0.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Parser lib for Fe."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
derive_more.workspace = true
lazy_static = "1.5.0"
logos = "0.15"
rowan = "0.16.1"
num_enum = "0.7"
smallvec.workspace = true
unwrap-infallible = "0.1.5"
tracing.workspace = true

[dev-dependencies]
dir-test.workspace = true
tree-sitter = "0.24"
tree-sitter-fe = { path = "../tree-sitter-fe" }
wasm-bindgen-test.workspace = true
test-utils.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
