[package]
name = "fe-resolver"
version = "26.0.0"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Resolver lib for Fe."

[lib]
doctest = false

[dependencies]
camino.workspace = true
url.workspace = true
glob.workspace = true
petgraph.workspace = true
tracing.workspace = true
smol_str.workspace = true
common.workspace = true

indexmap = "2.9"
sha2 = "0.10"
dir-test.workspace = true
test-utils.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gix = { version = "0.81.0", default-features = false, features = [
    "sha1",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
