[package]
name = "fe-semantic-indexing"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Semantic indexing engine for Fe: salsa-cached SCIP, LSIF, and doc generation"

[dependencies]
common.workspace = true
hir.workspace = true
driver.workspace = true
salsa.workspace = true
url.workspace = true
camino.workspace = true
scip = "0.6.1"
fe-web.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"

[dev-dependencies]
tempfile = "3.23"
test-utils.workspace = true
dir-test.workspace = true
