[package]
name = "fe-test-utils"
version = "26.0.0-alpha.7"
edition.workspace = true

[lib]
doctest = false

[dependencies]
common.workspace = true
insta = { default-features = false, version = "1.42", features = ["filters"] }
regex = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
url.workspace = true
