[package]
name = "tree-sitter-fe"
description = "Fe language grammar for tree-sitter"
version = "26.0.0"
authors = ["Fe Language Team"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "fe"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/fe-lang/tree-sitter-fe"
edition.workspace = true
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
