[package]
name = "fe-uitest"
version = "26.0.0-alpha.7"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
publish = false

[dependencies]
dir-test.workspace = true
wasm-bindgen-test.workspace = true
url.workspace = true

driver.workspace = true
test-utils.workspace = true
common.workspace = true
hir.workspace = true
mir.workspace = true
